chore: added webpack configuration

--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index",
+    "start": "npm-run-all --parallel nodemon webpack",
+    "nodemon": "nodemon src/index --ignore db.json",
     "semistandard": "semistandard --fix",
-    "tap": "c8 --lines 80 --functions 80 --branches 80 --statements 80 --check-coverage --per-file tap test/**/*.test.js test/**/**/*.test.js --no-coverage",    "test": "npm run semistandard && npm run tap"
+    "tap": "c8 --lines 80 --functions 80 --branches 80 --statements 80 --check-coverage --per-file tap test/**/*.test.js test/**/**/*.test.js --no-coverage",
+    "test": "npm run semistandard && npm run tap",
+    "webpack": "npx webpack -c webpack.dev.cjs --watch",
+    "webpack:build": "npx webpack -c webpack.dev.cjs",
+    "webpack:build:production": "npx webpack -c webpack.prod.cjs"
   },
   "repository": {
     "type": "git",
@@ -32,8 +37,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
     "c8": "^7.12.0",
     "chance": "^1.1.9",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.19.0",
     "eslint-config-semistandard": "16.0.0",
     "eslint-config-standard": "17.0.0",
@@ -42,10 +50,17 @@
     "eslint-plugin-mocha": "^10.0.5",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-standard": "4.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "must": "^0.13.4",
     "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "semistandard": "^16.0.1",
-    "tap": "^16.3.2"
+    "tap": "^16.3.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.8.0",
+    "worker-loader": "^3.0.8"
   },
   "semistandard": {
     "plugins": [
@@ -72,10 +87,14 @@
     "@fastify/jwt": "^6.5.0",
     "@fastify/secure-session": "^5.3.0",
     "@fastify/sensible": "^5.2.0",
+    "@fastify/static": "^6.6.0",
     "@fastify/swagger": "^7.6.1",
+    "@tjmonsi/small-router": "^0.0.3",
     "bcrypt": "^5.1.0",
+    "comlink": "^4.3.1",
     "fastify": "^4.10.2",
     "fastify-openapi-glue": "^4.1.1",
+    "lit": "^2.5.0",
     "uuid": "^9.0.0"
   }
 }
